feat: remove old workflow system
Remove the old workflow system. Relying on the LLM as the flow manager
is a better user experience and makes it easier for them to build up
complex logic.
