# api/openapi.json
@@ -6,7 +6,7 @@
       "name": "Apache 2.0",
       "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
     },
-    "version": "0.0.0"
+    "version": "0.0.1"
   },
   "servers": [
     {
@@ -529,322 +529,6 @@
           }
         }
       }
-    },
-    "/api/workflow": {
-      "get": {
-        "summary": "Get the list of workflows",
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Array_of_ObjectInfo"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "Create a workflow",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Workflow"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/int64"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/workflow/{id}": {
-      "get": {
-        "summary": "Get a workflow by ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Workflow"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "Update a workflow",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Workflow"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response"
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete a workflow",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response"
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/workflow/{id}/run": {
-      "post": {
-        "summary": "Run a workflow by ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Map_of_AnyValue"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Map_of_AnyValue"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/workflow/{id}/schema": {
-      "get": {
-        "summary": "Get the input and output JSON Schemas for a workflow",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/InputAndOutputSchema"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -866,59 +550,6 @@
         "items": {
           "$ref": "#/components/schemas/ToolDefinition"
         }
-      },
-      "Connection": {
-        "description": "A connection.",
-        "anyOf": [
-          {
-            "description": "A parameter passed in from outside the workflow.",
-            "type": "object",
-            "properties": {
-              "parameter": {
-                "description": "The name of the parameter.",
-                "type": "string"
-              },
-              "to": {
-                "description": "The task parameter to connect the workflow parameter to.",
-                "type": "string"
-              }
-            },
-            "required": ["parameter", "to"],
-            "additionalProperties": false
-          },
-          {
-            "description": "An output from workflow.",
-            "type": "object",
-            "properties": {
-              "from": {
-                "description": "The task parameter to connect to the output.",
-                "type": "string"
-              },
-              "output": {
-                "description": "The name of the output value.",
-                "type": "string"
-              }
-            },
-            "required": ["from", "output"],
-            "additionalProperties": false
-          },
-          {
-            "description": "A connection between the output of one task and the input of another.",
-            "type": "object",
-            "properties": {
-              "from": {
-                "description": "The ID of the task that produces the output.",
-                "type": "string"
-              },
-              "to": {
-                "description": "The ID of the task that consumes the output.",
-                "type": "string"
-              }
-            },
-            "required": ["from", "to"],
-            "additionalProperties": false
-          }
-        ]
       },
       "Error": {
         "description": "An error message.",
@@ -942,12 +573,12 @@
         "type": "object",
         "properties": {
           "inputSchema": {
-            "description": "The input schema for a task or workflow.",
+            "description": "The input schema for a task.",
             "type": "object",
             "additionalProperties": true
           },
           "outputSchema": {
-            "description": "The output schema for a task or workflow.",
+            "description": "The output schema for a task.",
             "type": "object",
             "additionalProperties": true
           }
@@ -1109,19 +740,6 @@
           }
         ]
       },
-      "TaskId": {
-        "description": "A task ID.",
-        "type": "object",
-        "properties": {
-          "taskId": {
-            "description": "The ID of the task.",
-            "type": "integer",
-            "format": "int64"
-          }
-        },
-        "required": ["taskId"],
-        "additionalProperties": false
-      },
       "Template": {
         "description": "A template written with Jinja2 syntax.",
         "type": "string"
@@ -1151,68 +769,6 @@
           }
         },
         "required": ["id", "name", "provider", "description", "inputSchema"],
-        "additionalProperties": false
-      },
-      "Workflow": {
-        "description": "A workflow.",
-        "type": "object",
-        "properties": {
-          "actions": {
-            "description": "The tasks in the workflow.\n\n The keys are the IDs of the tasks.",
-            "type": "object",
-            "additionalProperties": {
-              "$ref": "#/components/schemas/WorkflowAction"
-            }
-          },
-          "connections": {
-            "description": "A mapping of connections between tasks.\n\n # Example\n\n ```json\n [\n   {\n     // Make the workflow parameter `url` available to the task `foo`.\n     \"parameter\": \"url\",\n     \"to\": \"foo.url\"\n   },\n   {\n     // Pipe the output of the `foo` task to the `content` parameter of task `bar`.\n     \"from\": \"foo.output\",\n     \"to\": \"bar.content\"\n   }\n   {\n     // Pipe the output of the `bar` task to the `my_output` output of the workflow.\n     \"from\": \"bar.output\",\n     \"output\": \"my_output\"\n   }\n ]\n ```",
-            "type": "array",
-            "default": [],
-            "items": {
-              "$ref": "#/components/schemas/Connection"
-            }
-          },
-          "name": {
-            "description": "The name of the workflow.",
-            "type": "string"
-          }
-        },
-        "required": ["name", "actions"],
-        "additionalProperties": false
-      },
-      "WorkflowAction": {
-        "description": "A task a workflow will perform.",
-        "anyOf": [
-          {
-            "$ref": "#/components/schemas/TaskId"
-          },
-          {
-            "$ref": "#/components/schemas/WorkflowId"
-          },
-          {
-            "description": "Run a tool.",
-            "type": "object",
-            "properties": {
-              "toolId": {
-                "type": "string"
-              }
-            },
-            "required": ["toolId"],
-            "additionalProperties": false
-          }
-        ]
-      },
-      "WorkflowId": {
-        "description": "A workflow ID.",
-        "type": "object",
-        "properties": {
-          "workflowId": {
-            "description": "The ID of the workflow.",
-            "type": "integer",
-            "format": "int64"
-          }
-        },
-        "required": ["workflowId"],
         "additionalProperties": false
       },
       "int64": {
