# crates/http/src/generated.rs
@@ -40,47 +40,12 @@ pub trait ServerInterface {
     /// Get the list of tasks
     async fn get_task(
         &self,
-    ) -> anyhow::Result<crate::HttpResponse<std::vec::Vec<sauropod_schemas::workflow::ObjectInfo>>>;
+    ) -> anyhow::Result<crate::HttpResponse<std::vec::Vec<sauropod_schemas::task::ObjectInfo>>>;
     /// Create a task
     async fn post_task(
         &self,
         input: sauropod_schemas::task::Task,
     ) -> anyhow::Result<crate::HttpResponse<i64>>;
-    /// Get a workflow by ID
-    async fn get_workflow_id(
-        &self,
-        id: i64,
-    ) -> anyhow::Result<crate::HttpResponse<sauropod_schemas::workflow::Workflow>>;
-    /// Update a workflow
-    async fn post_workflow_id(
-        &self,
-        id: i64,
-        input: sauropod_schemas::workflow::Workflow,
-    ) -> anyhow::Result<crate::HttpResponse<()>>;
-    /// Delete a workflow
-    async fn delete_workflow_id(&self, id: i64) -> anyhow::Result<crate::HttpResponse<()>>;
-    /// Get the list of workflows
-    async fn get_workflow(
-        &self,
-    ) -> anyhow::Result<crate::HttpResponse<std::vec::Vec<sauropod_schemas::workflow::ObjectInfo>>>;
-    /// Create a workflow
-    async fn post_workflow(
-        &self,
-        input: sauropod_schemas::workflow::Workflow,
-    ) -> anyhow::Result<crate::HttpResponse<i64>>;
-    /// Run a workflow by ID
-    async fn post_workflow_id_run(
-        &self,
-        id: i64,
-        input: serde_json::map::Map<std::string::String, serde_json::value::Value>,
-    ) -> anyhow::Result<
-        crate::HttpResponse<serde_json::map::Map<std::string::String, serde_json::value::Value>>,
-    >;
-    /// Get the input and output JSON Schemas for a workflow
-    async fn get_workflow_id_schema(
-        &self,
-        id: i64,
-    ) -> anyhow::Result<crate::HttpResponse<sauropod_schemas::InputAndOutputSchema>>;
     /// Get the list of available tools
     async fn get_tools(
         &self,
@@ -277,152 +242,6 @@ pub fn register_routes<T: ServerInterface + Sync + Send + 'static>(
                             "Request",
                             method = "POST",
                             path = "/task"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            }),
-        )
-        .route(
-            "/workflow/{id}",
-            axum::routing::get({
-                let server_clone = server.clone();
-                async move |axum::extract::Path(id): axum::extract::Path<i64>| {
-                    tracing::debug!("GET /workflow/{{id}}");
-                    let response = server_clone
-                        .get_workflow_id(id)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "GET",
-                            path = "/workflow/{{id}}"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            })
-            .post({
-                let server_clone = server.clone();
-                async move |axum::extract::Path(id): axum::extract::Path<i64>,
-                            axum::extract::Json(input): axum::extract::Json<
-                    sauropod_schemas::workflow::Workflow,
-                >| {
-                    tracing::debug!("POST /workflow/{{id}}");
-                    let response = server_clone
-                        .post_workflow_id(id, input)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "POST",
-                            path = "/workflow/{{id}}"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            })
-            .delete({
-                let server_clone = server.clone();
-                async move |axum::extract::Path(id): axum::extract::Path<i64>| {
-                    tracing::debug!("DELETE /workflow/{{id}}");
-                    let response = server_clone
-                        .delete_workflow_id(id)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "DELETE",
-                            path = "/workflow/{{id}}"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            }),
-        )
-        .route(
-            "/workflow",
-            axum::routing::get({
-                let server_clone = server.clone();
-                async move || {
-                    tracing::debug!("GET /workflow");
-                    let response = server_clone
-                        .get_workflow()
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "GET",
-                            path = "/workflow"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            })
-            .post({
-                let server_clone = server.clone();
-                async move |axum::extract::Json(input): axum::extract::Json<
-                    sauropod_schemas::workflow::Workflow,
-                >| {
-                    tracing::debug!("POST /workflow");
-                    let response = server_clone
-                        .post_workflow(input)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "POST",
-                            path = "/workflow"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            }),
-        )
-        .route(
-            "/workflow/{id}/run",
-            axum::routing::post({
-                let server_clone = server.clone();
-                async move |axum::extract::Path(id): axum::extract::Path<i64>,
-                            axum::extract::Json(input): axum::extract::Json<
-                    serde_json::map::Map<std::string::String, serde_json::value::Value>,
-                >| {
-                    tracing::debug!("POST /workflow/{{id}}/run");
-                    let response = server_clone
-                        .post_workflow_id_run(id, input)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "POST",
-                            path = "/workflow/{{id}}/run"
-                        ))
-                        .await;
-                    if let Err(error) = &response {
-                        tracing::error!("Error responding to request: {:?}", error);
-                    }
-                    crate::create_response_from_result(response)
-                }
-            }),
-        )
-        .route(
-            "/workflow/{id}/schema",
-            axum::routing::get({
-                let server_clone = server.clone();
-                async move |axum::extract::Path(id): axum::extract::Path<i64>| {
-                    tracing::debug!("GET /workflow/{{id}}/schema");
-                    let response = server_clone
-                        .get_workflow_id_schema(id)
-                        .instrument(tracing::info_span!(
-                            "Request",
-                            method = "GET",
-                            path = "/workflow/{{id}}/schema"
                         ))
                         .await;
                     if let Err(error) = &response {
