# tools/generate-code/src/main.rs
@@ -1,10 +1,9 @@
 use sauropod_schemas::{
     InputAndOutputSchema, ModelDefinition, ToolDefinition,
-    task::Task,
-    workflow::{ObjectInfo, Workflow},
+    task::{ObjectInfo, Task},
 };
 
-use generate_code::{Object, database_types, json_schema::write_schema, openapi};
+use generate_code::{Object, database_types, openapi};
 
 fn main() -> anyhow::Result<()> {
     openapi! {
@@ -29,21 +28,6 @@ fn main() -> anyhow::Result<()> {
             POST (Task) -> i64 : "Create a task"
             GET (()) -> Vec<ObjectInfo> : "Get the list of tasks"
         )
-        route "/workflow/{id:i64}" (
-            GET (()) -> Workflow : "Get a workflow by ID"
-            DELETE (()) -> () : "Delete a workflow"
-            POST (Workflow) -> () : "Update a workflow"
-        )
-        route "/workflow" (
-            POST (Workflow) -> i64 : "Create a workflow"
-            GET (()) -> Vec<ObjectInfo> : "Get the list of workflows"
-        )
-        route "/workflow/{id:i64}/run" (
-            POST (Object) -> Object : "Run a workflow by ID"
-        )
-        route "/workflow/{id:i64}/schema" (
-            GET (()) -> InputAndOutputSchema : "Get the input and output JSON Schemas for a workflow"
-        )
         route "/tools" (
             GET (()) -> Vec<ToolDefinition> : "Get the list of available tools"
         )
@@ -56,12 +40,8 @@ fn main() -> anyhow::Result<()> {
     };
 
     database_types! {
-        Workflow,
         Task
     };
-
-    write_schema::<Workflow>()?;
-    write_schema::<Task>()?;
 
     generate_code::generate_code_for_config()?;
     generate_code::generate_code_for_docker()?;
